[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "energyplus_transition_tools"
version = "2.1.1"
description = "A library and tkinter-based tool for transitioning EnergyPlus input files"
authors = [{name ="Edwin Lee", email = "contact@nrel.org"}, {name = "Julien Marrec", email = "contact@effibem.com"}]
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    'EnergyPlus', 'eplus', 'Energy+',
    "building energy modeling",
    'EnergyPlusTransitionTools', 'energyplus_transition_tools',
    'Building Simulation', 'Whole Building Energy Simulation',
    'Heat Transfer', 'HVAC', 'Modeling',
]
license = {text = "ModifiedBSD"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Utilities',
    'Natural Language :: English',
    'Natural Language :: French',
    'Natural Language :: Spanish',
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
  "PLAN-Tools>=0.5",
  "pypiwin32; os_name == 'nt'",
]

[project.entry-points."gui_scripts"]
energyplus_transition_gui = "energyplus_transition.runner:main_gui"

[project.entry-points."console_scripts"]
energyplus_transition_configure = "energyplus_transition.configure:configure_cli"


[project.optional-dependencies]
test = ["tox", "pytest", "pytest-cov", "black", "flake8", "mypy", "isort"]

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py
